# nyapy

./: LICENSE  pyproject.toml
src/nyapy/: __init__.py  client.py  enums.py  nyaa.py  nyaafun.py  sukebei.py
src/nyapy/types/: nyaa.py
