[project]
name = "nyapy"
version = "0.1.3"
authors = [
    { name = "mikel39", email = "202028875+mikel39@users.noreply.github.com" }
]
description = "A nyaa scrapper"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "httpx>=0.28.1",
]
[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
[project.urls]
Homepage = "https://github.com/mikel39/nyapy"
